gap fix

--- a/style-2.css
+++ b/style-2.css
@@ -468,7 +468,7 @@ span.fl-txt-line-bg{
 		line-height: 60px;
 	}
 	.vr-Biotin-Collagen-sec-wrp {
-	    padding-top: 25px;
+	    padding-top: 10px;
 	}
 	.vr-Biotin-Collagen-bdr strong {
 	    padding: 15px 55px 25px;
